src/runtime/zig/lean_rt.zig

pub extern fn lean_nat_big_succ(a: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_nat_big_add(a1: LeanObj, a2: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_nat_big_sub(a1: LeanObj, a2: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_nat_overflow_mul(a1: usize, a2: usize) callconv(.c) LeanObj;
pub extern fn lean_nat_big_mul(a1: LeanObj, a2: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_nat_big_div(a1: LeanObj, a2: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_nat_big_mod(a1: LeanObj, a2: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_nat_big_eq(a1: LeanObj, a2: LeanObj) callconv(.c) bool;
pub extern fn lean_nat_big_le(a1: LeanObj, a2: LeanObj) callconv(.c) bool;
pub extern fn lean_nat_big_lt(a1: LeanObj, a2: LeanObj) callconv(.c) bool;
pub extern fn lean_nat_pow(a1: LeanObj, a2: LeanObj) callconv(.c) LeanObj;
pub extern fn lean_cstr_to_nat(s: [*c]const u8) callconv(.c) LeanObj;
pub extern fn lean_big_uint64_to_nat(n: u64) callconv(.c) LeanObj;
pub extern fn lean_uint32_of_big_nat(a: LeanObj) callconv(.c) u32;
pub extern fn lean_uint64_of_big_nat(a: LeanObj) callconv(.c) u64;
pub inline fn lean_uint64_to_nat(n: u64) LeanObj {
    @setEvalBranchQuota(10000000);
    if (n <= LeanMaxSmallNat) {
        return lean_box(@intCast(n));
    } else {
        return lean_big_uint64_to_nat(n);
    }
}
pub inline fn lean_nat_succ(a: LeanObj) LeanObj {
    @setEvalBranchQuota(10000000);
    if (lean_is_scalar(a) != 0) {
        return lean_usize_to_nat(lean_unbox(a) +% 1);
    } else {
        return lean_nat_big_succ(a);
    }
}
pub inline fn lean_nat_add(a1: LeanObj, a2: LeanObj) LeanObj {
    @setEvalBranchQuota(10000000);
    if (lean_is_scalar(a1) != 0 and lean_is_scalar(a2) != 0) {
        return lean_usize_to_nat(lean_unbox(a1) +% lean_unbox(a2));
    } else {
        return lean_nat_big_add(a1, a2);
    }
}
pub inline fn lean_nat_sub(a1: LeanObj, a2: LeanObj) LeanObj {
    @setEvalBranchQuota(10000000);
    if (lean_is_scalar(a1) != 0 and lean_is_scalar(a2) != 0) {
        const n1 = lean_unbox(a1);
        const n2 = lean_unbox(a2);
        if (n1 < n2) {
            return lean_box(0);
        } else {
            return lean_box(n1 - n2);
        }
    } else {
        return lean_nat_big_sub(a1, a2);
    }
}
pub inline fn lean_nat_mul(a1: LeanObj, a2: LeanObj) LeanObj {
    @setEvalBranchQuota(10000000);
    if (lean_is_scalar(a1) != 0 and lean_is_scalar(a2) != 0) {
        const n1 = lean_unbox(a1);
        if (n1 == 0) {
            return a1;
        }
        const n2 = lean_unbox(a2);
        const r = n1 *% n2;
        if (r <= LeanMaxSmallNat and r / n1 == n2) {
            return lean_box(r);
        } else {
            return lean_nat_overflow_mul(n1, n2);
        }
    } else {
        return lean_nat_big_mul(a1, a2);
    }
}
pub inline fn lean_nat_div(a1: LeanObj, a2: LeanObj) LeanObj {
    @setEvalBranchQuota(10000000);
    if (lean_is_scalar(a1) != 0 and lean_is_scalar(a2) != 0) {
        const n1 = lean_unbox(a1);
        const n2 = lean_unbox(a2);
        if (n2 == 0) {
            return lean_box(0);
        } else {
            return lean_box(n1 / n2);
        }
    } else {
        return lean_nat_big_div(a1, a2);
    }
}
pub inline fn lean_nat_mod(a1: LeanObj, a2: LeanObj) LeanObj {
    @setEvalBranchQuota(10000000);
    if (lean_is_scalar(a1) != 0 and lean_is_scalar(a2) != 0) {
        const n1 = lean_unbox(a1);
        const n2 = lean_unbox(a2);
        if (n2 == 0) {
            return lean_box(n1);
        } else {
            return lean_box(n1 % n2);
        }
    } else {
        return lean_nat_big_mod(a1, a2);
    }
}
pub inline fn lean_nat_eq(a1: LeanObj, a2: LeanObj) bool {
    @setEvalBranchQuota(10000000);
    if (lean_is_scalar(a1) != 0 and lean_is_scalar(a2) != 0) {
        return a1 == a2;
    } else {
        return lean_nat_big_eq(a1, a2);
    }
}
pub inline fn lean_nat_dec_eq(a1: LeanObj, a2: LeanObj) u8 {
    @setEvalBranchQuota(10000000);
    return @intFromBool(lean_nat_eq(a1, a2));
}
pub inline fn lean_uint32_of_nat(a: LeanObj) u32 {
    @setEvalBranchQuota(10000000);
    if (lean_is_scalar(a) != 0) {
        return @intCast(lean_unbox(a));
    } else {
        return lean_uint32_of_big_nat(a);
    }
}
pub inline fn lean_uint64_of_nat(a: LeanObj) u64 {
    @setEvalBranchQuota(10000000);
    if (lean_is_scalar(a) != 0) {
        return @intCast(lean_unbox(a));
    } else {
        return lean_uint64_of_big_nat(a);
    }
}

pub fn lean_io_result_is_ok(r: LeanObj) bool {
    return lean_obj_tag(r) == @as(c_uint, 0);
}
pub fn lean_io_result_get_value(r: LeanObj) LeanObj {
    return lean_ctor_get(r, @as(c_uint, 0));
}
